--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 <body>
 
     <main>
+        <img src="" alt="pokemon" class="pokemon_image">
+        <h1 class="pokemon_data">
+            <span class="pokemon_number">6</span> -
+            <span class="pokemon_name">charizard</span>
+        </h1>
+        <form class="form">
+            <input 
+            type="search"
+            class="input_search"
+            placeholder="name or number"
+            required
+            >
+        </form>
+
+        <div class="buttons">
+            <button class="button btv-prev">prev <</button>
+            <button class="button btv-next">next ></button>
+        </div>
 
         <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
 
